--- a/public/style.css
+++ b/public/style.css
@@ -73,7 +73,7 @@
 
   .header {
     text-align: center;
-    padding-top: 25px;
+    margin: 25px;
   }
 
   .header img{
@@ -93,9 +93,14 @@
 
   }
 
+
+
   /* FOR HOME *****************************************************/
   .home-component{
-    background-color: #d2c4ae;
+    /* background-color: #d2c4ae; */
+    background-color: #C1C1AF;
+    /* background-color: #c7c7ba; */
+    
     
     
    
@@ -103,33 +108,48 @@
 
   .home-body{
     margin: auto;
+    
     max-width: 1000px;
     color: rgb(41, 39, 39);
-    background-image: url('/src/images/gojo.jpg');
-    
-    
+    background-image: url('/src/images/gojo.jpg');  
   }
+
+
+
+ 
 
   
 
   .home-body h1{
     display: flex;
     justify-content: center;
-    font-family: 'Unica One', cursive;
+    font-family: 'Potta One', cursive;
     font-weight: 600;
     font-size: 50px;
     margin: 25px 0;
+    color:#3f3334;
+    
+  }
+
+  .home-mission{
+    padding-bottom: 30px;
+  }
+
+  .home-mission p{
+    color: rgb(73, 51, 47);
+    font-weight: bold;
+    text-align: center;
   }
 
   .home-body h2{
-   margin: 20px;
+   margin: 25px;
    font-weight: 600;
    margin-top: 60px;
    
   }
 
   .home-body p{
-    margin: 20px;
+    margin: 25px;
     font-size: 17px;
     line-height: 27px;
     letter-spacing: 0.4px;
@@ -145,15 +165,136 @@
   }
 
   .home-summary{
-    border: solid 2px black;
+    border: solid 7px rgb(131, 106, 106);
     border-radius: 10px;
+    
+  }
+
+  .home-summary-banner {
+    display: flex;
+    margin-bottom: 150px;
+  }
+
+  .home-summary-banner p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    font-size: 55px;
+    font-weight: 600;
+    font-family: 'Rubik Moonrocks', cursive;
+    word-spacing: 10px;
+    
+  }
+
+  .home-summary-component{
+    margin-bottom: 170px;
+  }
+
+  .home-summary h2{
+    text-align: center;
   }
 
   .home-summary span{
     font-weight: bold;
   }
 
+  .home-summary ul{
+    margin-left: 20px;
+  }
 
+
+
+
+  /* FOR KANA **************************************************/
+  
+  .kana-parent{
+    margin: 25px auto;
+    text-align: center;
+    max-width: 1000px;
+    
+
+  }
+
+  .kana-div h1{
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 40px;
+    color: rgb(105, 88, 88);
+  }
+
+  .kana-div iframe{
+    border: solid 5px rgb(18, 124, 107);
+    border-radius: 10px;
+    margin-bottom: 30px;
+
+  }
+
+  .kana-div img{
+    /* border: solid 5px rgb(68, 77, 69); */
+    border-radius: 10px;
+    margin-bottom: 150px;
+    opacity: 0.9;
+
+  }
+
+  /* FOR PARTS OF SPEECH *************************************/
+
+  .pos-parent{
+    color:#1f241f;
+    text-align: center;
+    max-width: 950px;
+    margin: auto;
+    height: 1000px;
+
+    
+  }
+
+
+
+  .pos-category{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;  
+  }
+
+  .pos-div{
+    width: 200px;
+  }
+
+  .pos-category h2{
+    margin-bottom: 20px;
+    font-weight: 600;
+  }
+
+  .pos-category button{
+    font-size: 16px;
+    width: 170px;
+    margin: 3px 0;
+    border-radius: 3px; 
+    color: tan;
+  }
+
+  .pos-category button:hover{
+    color:rgb(223, 150, 15)
+  }
+
+  .pos-noun button{
+    background-color: rgb(67, 97, 63);
+  }
+
+  .pos-verb button{
+    background-color: rgb(97, 63, 94);
+  }
+
+  .pos-adj button{
+    background-color: rgb(97, 82, 63);
+  }
+
+  .pos-adv button{
+    background-color: rgb(63, 63, 97);
+  }
 
 
 
@@ -173,15 +314,18 @@
     border-collapse: collapse;   
     margin: 25px 0;
     font-size: 0.9em;
-    min-width: 400px;
+    min-width: 500px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     
+    
   }
 
   .content-table tr {
-    background-color: #d2c4ae;
+    background-color: #c7b9a2;
+    
+    
   }
 
   .content-table thead tr {
@@ -195,7 +339,7 @@
   
 
   .content-table th {
-      padding: 12px 27px;
+      padding: 10px 27px;
       color: black;
       text-align: left;
       font-size: 1.2em;
@@ -242,12 +386,21 @@
   /* background-image: linear-gradient(to bottom, #eedbd4, #e0bcb4, #d19c99, #c17d84, #ae5e74, #ac4e6b, #a93c62, #a52759, #b2184c, #bd053b, #c40027, #c70909); */
 
 
+  /* NOUN DISPLAY ********************************************/
+
+ 
+
 
 
   /* VERB DISPLAY ********************************************/
 
   .inner-background {
     background-color: #C1C1AF;
+  }
+  
+  .verb-parent{
+    max-width: 1000px;
+    margin: auto;
   }
 
   .verb-head {
@@ -268,6 +421,10 @@
   /*  ADJECTIVE DISPLAY *****************************************/
 
  
+  .adj-parent{
+    max-width: 1000px;
+    margin: auto;
+  }
 
   .adj-header {
     padding-top: 5em;
@@ -357,13 +514,14 @@
 
   .adv-p {
     display: flex;
-    width: 65%;
-    justify-content: center;
+    max-width: 1000px;
+    text-align: left;
     margin: auto;
     color: black;
     padding: 0.5em 0;
     line-height: 1.4em;
     font-size: 19px;
+   
   }
 
   tr .adv-exp {
@@ -429,12 +587,19 @@
     margin: auto;
     padding-top: 20px;
     font-size: 20px;
-    min-width: 300px;
+    display: flex;
+    justify-content: center;
+   
+    /* min-width: 300px; */
   }
 
   .flashcard-body span {
     padding: 0 17px;
     color: black;
+  }
+
+  .span .flashcard-count{
+    width: 150px;
   }
 
   .flashcard-body .arrow {
@@ -450,29 +615,34 @@
 
 
   .shortcut-key {
-    margin: 20px 5px;
+    text-align: center;
     color: #33312E;
+    
   }
 
 
-  .shortcut-key h2{
-    margin: 0 0 10px 4px;
+  .shortcut-key .keys{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
   }
 
   .keyboard {
     border: solid 1px black;
     border-radius: 4px;
-    margin: 0 5px;
+    opacity: 0.9;
     padding: 1.4px 3.5px;
     box-shadow: 1.5px 1.5px rgb(97, 93, 143);
     background-color: #33312E;
     color: #d2c4ae;
     
   }
-
+/* 
   .shortcut-key p {
-    margin-bottom: 9px;
-  }
+    border: solid 1px black;
+    padding: 5px;
+    border-radius: 5px;
+  } */
 
   
  /* RANDOM *************************************************/
@@ -486,7 +656,7 @@
   }
 
   .main-body h1{
-    margin-top: 70px;
+    margin-top: 40px;
     letter-spacing: 0.5px;
   
   
@@ -503,7 +673,7 @@
   
   
   .random h1{
-    margin-top: 90px;
+    margin-top: 50px;
     color: black;
   }
 
@@ -527,9 +697,30 @@
     color: #33312E;
   }
   
-  .random form{
+  .random-form{
     margin-top: 70px;
     
+  }
+
+  .random-icon-parent{
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .random-icon{
+    width: 1.9em;
+    height: 1.9em;
+    margin: 3px;
+    
+  }
+
+  .random-icon:hover{
+    color: rgb(15, 223, 126);
+    background-color: black;
+    border-radius: 50%;
+    padding: 0;
+    cursor: pointer;
+  
   }
 
 
@@ -615,14 +806,24 @@
 
 
 .challenge-parent{
-  background-color: #a09b97;
-  text-align: center;
+  background-color: #afaf9e;
+  
   color: black;
 }
 
 .challenge-intro{
   max-width: 1200px;
-  margin: 20px auto;
+  margin: 0 auto 10px auto;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Dela Gothic One', cursive;
+}
+
+
+
+.challenge-card{
+  border: solid 3px black;
+ 
 }
 
 
@@ -639,7 +840,8 @@
   flex-wrap: wrap;
   height: min-content;
   max-width: 730px;
-  border: solid black 2px; 
+  border: solid rgb(68, 63, 63) 2px; 
+  border-radius: 3px;
 
 }
 
@@ -654,17 +856,20 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 1;
-  transition: 3s;  
+  transition: 2s;  
   font-size: 15px;
   padding: 11px;
-  font-family: Arial, Helvetica, sans-serif,
+  font-family: Arial, Helvetica, sans-serif;
+  color:  #c5baa9 ;
+  background-color: #33312E ;
 }
 
 
 .monitor-item:hover {
-  background-color: rgb(214, 182, 154);
+  background-color: #c5baa9;
+  color: #33312E;
   cursor: pointer;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 
@@ -673,7 +878,7 @@
   display: flex;
   justify-content: right;
   margin: 10px auto;
-  max-width: 710px;
+  max-width: 730px;
 
   
 }
@@ -681,13 +886,14 @@
 .monitor-button button{
   display: flex;
   width: 140px;
-  height: 30px;
+  height: 35px;
   justify-content: center;
   align-items: center;
-  color: black;
   border: solid 2px rgb(71, 69, 69);
   border-radius: 5px;
-  background-color: #968d7d;
+  font-size: 15px;
+  font-weight: 600;
+  color: tan;
 }
 
 
@@ -697,12 +903,20 @@
   justify-content: left;
   align-items: center;
   width: 100%;
-  gap: 5px;
+  
 
 }
 
 .complete-box .complete-button{
-  width: 180px
+  width: 180px;
+  background-color: rgb(63, 97, 63);
+
+  
+}
+
+.monitor-button .restart-button{
+  background-color: rgb(153, 47, 47);
+  
 }
 
 
@@ -721,6 +935,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 1000;
+  text-align: center;
   
 }
 
@@ -789,6 +1004,7 @@
   position: absolute;
   bottom: 3px;
   left: 5px; 
+  
 
   
 
@@ -807,6 +1023,7 @@
   margin-left: 20px;
   font-size: 14px;
   letter-spacing: 1px;
+  color: rgb(39, 37, 37)
 }
 
 
@@ -815,9 +1032,10 @@
 }
 
 .confirm-button:hover{
-  border: 3px black solid;
+  border: 2px black solid;
   background-color: green;
   cursor: pointer;
+  color: white;
   
 }
 
@@ -826,9 +1044,10 @@
 }
 
 .cancel-button:hover{
-  border: 3px black solid;
+  border: 2px black solid;
   background-color: rgb(209, 62, 86);
   cursor: pointer;
+  
   
   
 }
@@ -848,6 +1067,11 @@
   height: 80px;
   cursor: pointer;
   margin: 0 20px;
+  border-radius: 50%;
+}
+
+.card-container img:hover{
+  background-color: rgb(206, 80, 58);
 }
 
 .card{
@@ -907,6 +1131,7 @@
 .navbar-logo:hover{
   height: 70px;
   transition: 0.2s;
+  border: solid 5px #f58cff;
   border: solid 5px rgb(206, 79, 96);
 }
 
