--- a/public/style.css
+++ b/public/style.css
@@ -133,12 +133,14 @@
 
   .home-mission{
     padding-bottom: 30px;
+    background-image: url(../src/images/background.jpg);
   }
 
   .home-mission p{
     color: rgb(73, 51, 47);
     font-weight: bold;
     text-align: center;
+    
   }
 
   .home-body h2{
@@ -165,8 +167,10 @@
   }
 
   .home-summary{
-    border: solid 7px rgb(131, 106, 106);
+    /* border: solid 7px rgb(131, 106, 106); */
     border-radius: 10px;
+    margin: auto;
+    width: 80%;
     
   }
 
@@ -188,11 +192,16 @@
   }
 
   .home-summary-component{
-    margin-bottom: 170px;
+    margin-bottom: 10px;
   }
 
   .home-summary h2{
     text-align: center;
+    font-size: 18px;
+  }
+
+  .home-summary p{
+    font-size: 15px;
   }
 
   .home-summary span{
@@ -217,10 +226,11 @@
   }
 
   .kana-div h1{
-    font-size: 45px;
+    font-size: 70px;
     font-weight: 600;
     margin-bottom: 40px;
-    color: rgb(105, 88, 88);
+    color: rgb(78, 75, 75);
+    text-shadow: 1px 2px 3px #414e58d3;
   }
 
   .kana-div iframe{
@@ -233,10 +243,48 @@
   .kana-div img{
     /* border: solid 5px rgb(68, 77, 69); */
     border-radius: 10px;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
     opacity: 0.9;
 
   }
+
+  .kana-div button{
+    width: 850px;
+    font-weight: 700;
+    margin-bottom: 270px;
+    background-color: rgb(97, 76, 63);
+    color: tan;
+    letter-spacing: 0.8px;
+    transition: 0.5s;
+    border-radius: 20px;
+    height: 45px;
+  }
+
+  .kana-div button:hover{
+    font-size: 20px;
+    font-weight: 900;
+    background-color: rgb(77, 64, 56);
+    letter-spacing: 2.5px;
+    word-spacing: 15px;
+    height: 50px;
+    transition: 0.5s;
+  }
+
+
+ /* KANA TEST ***********************************************/
+
+ .kanatest-component{
+  width: 80%;
+  margin: auto;
+ }
+
+ .kanatest-component input{
+  margin-left: 10px;
+  height: 28px;
+  align-items: center;
+  align-content: center;
+ }
+
 
   /* FOR PARTS OF SPEECH *************************************/
 
@@ -272,7 +320,22 @@
     margin-top: 20px;
     margin-bottom: 20px;
     font-weight: 600;
+    letter-spacing: 0.5px;
   }
+
+  .pos-div h3{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 20px;
+    width: 160px;
+    line-height: 1.4em;
+    font-size: 16px;
+    letter-spacing: 1.4px;
+    color: rgba(207, 193, 193, 0.521)
+  }
+
+
 
   .pos-div-icon{
     font-size: 40px;
@@ -293,6 +356,14 @@
     transition: 0.4s;
     box-shadow: none;
   
+  }
+
+  .show-pos-div-content{
+    visibility: visible;
+  }
+
+  .hide-pos-div-content{
+    visibility: hidden;
   }
 
 
@@ -331,6 +402,15 @@
     margin-top: 20px;
     margin-bottom: 15px;
     font-weight: 600;
+    letter-spacing: 0.5px;
+   
+  }
+
+  .sentence-structure h3{
+    line-height: 1.4em;
+    font-size: 16px;
+    letter-spacing: 1.4px;
+    color: rgba(207, 193, 193, 0.521)
   }
 
   .sentence-structure .pos-div-icon{
@@ -450,6 +530,7 @@
     width: 150px;
     align-items: center;
     text-decoration: none;
+    transition: 0.5s;
    
    
   }
@@ -457,8 +538,8 @@
   .node:hover{
    
     border-top: 1px solid black;
-    padding: 7px;
-    transition: 0.5s ease;
+    padding: 10px;
+    transition: 0.3s;
   }
 
   .node-content{
@@ -664,6 +745,17 @@
     height: 35px; 
   }
 
+
+  .kanji-input-filter input{
+    height: 28px;
+    width: 80%;
+    outline-color: #336642;
+    color: rgb(39, 35, 35);
+    opacity: 0.8;
+    
+  }
+
+
   .kanji-dropdown h3{
     position: relative;
     bottom: 10px;
@@ -697,6 +789,7 @@
     border: solid 0.5px rgb(175, 50, 50);
     z-index: 100;
     font-size: 11px;
+   
   }
 
 
@@ -876,28 +969,125 @@
 
 
   .flashcard-body {
-    padding: 30px 200px 100px 200px;
+    padding: 30px 200px 100px 200px;  
+  }
 
+  .flashcard-all-button{
+    display: flex;
+  }
+
+
+  .flashcard-align-button{
+    margin: 15px auto;
+    text-align: center;
+    display: flex;
+    position: relative;
+  }
+
+  .flashcard-category-button{   
+    position: absolute;
+    right: 300px;
+    top: 10px;  
     
   }
 
-  .flashcard-random-button{
-    margin: 15px auto;
+  .menu{
+    position: relative;
+  }
+
+  .ani-menu{
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+
+    top:100%;
+    left: 0;
+    width: 100%;
+
+    transform: translateY(-3em);
+    z-index: -1;
+    transition: all 0.3s ease 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+    
+  }
+
+  .menu:focus .ani-menu,
+  .menu:focus-within .ani-menu,
+  .menu:hover .ani-menu{
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0);
+    transition: 0.2s;
+    transition-delay: 0s, 0s, 0.3s;
+  }
+
+  nav p{
+    color: #d2c4ae;
+    display: block;
+    padding: 8px 60px;
+    text-decoration: none;
+    font-family: big john;
+    opacity: 0.8;
+    
+  }
+
+  .ani-menu p{
+    width: 100%;
+    padding: 9px 30px;
+    font-family: roboto;
+  }
+
+  .ani-menu p:hover{
+    background: #262626;
+  }
+
+  nav p:hover{
+    background-color: rgb(67, 97, 63);
+    cursor: pointer;
+  }
+
+  nav ul, nav ul div{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav > ul{
+    background-color: #262626;
     text-align: center;
   }
 
+  nav > ul > div{
+    display: inline-block;
+    border-left: 1px solid #fff;
+  }
+
+  nav > ul > div:first-child{
+    border-left: none;
+  }
+
+  .ani-menu{
+    background-color: rgb(67, 97, 63);
+  }
+
+
   .flashcard-random-button button {
     text-align: center;
-    background-color: #C1C1AF;
-    border: solid 2px black;
+    background-color: #33312E;
+    /* background-color: #C1C1AF; */
+    
+    border: solid 2px #C1C1AF ;
     border-radius: 5px;
-    color: #122731;
+    /* color: #122731; */
+    color: #d2c4ae;
   }
 
   .flashcard-random-button button:hover {
     background-color: #33312E;
-    color: #d2c4ae;
-    border: solid 2px #C1C1AF ;
+    color: #c4a36d;
+    border: solid 2px black;
+    
+    
   }
   
 
@@ -1044,7 +1234,73 @@
 
 
 
-/* READING *****************************************************/
+
+
+/* READING ********************************************************/
+
+.reading-container{
+  padding-top: 50px;
+  display: flex;
+  margin: auto;
+  width: 80%;
+}
+
+
+.reading-btn-container{
+  display: flex;
+  flex-direction: column;
+}
+
+
+.reading-button{
+  margin: 8px;
+  height: 35px;
+  width: 150px;
+  font-size: 15px;
+  background-color: #33312E;
+  color:#8c915d;
+  border-radius: 7px;
+
+}
+
+.reading-content{
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 1.1px;
+ 
+  line-height: 2.5em;
+  width: 70%;
+  font-size: 20px;
+  color: black;
+  
+}
+
+.reading-content h1{
+  font-size: 25px;
+  word-spacing: 1px;
+  margin-bottom: 20px;
+  font-weight: 900;
+}
+
+.reading-content p{
+  line-height: 1.5em;
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* READING UPDATE*****************************************************/
 
 .story{
   margin: auto;
